# hasscheck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  hasscheck.example.yaml  idea.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  smoke-publish.yml
docs/: README.md  compatibility-claim-policy.md  demo.cast  demo.md  demo.sh  recording.md
docs/architecture/: badges.md  config-file.md  project-applicability-context.md  publish-handshake.md  scaffolding.md
docs/decisions/: 0001-config-override-policy.md  0002-block-a-deferred-to-v03.md  0003-config-file-override-policy.md  0004-project-applicability-context.md  0005-scaffolding-policy.md  0006-ruleset-versioning.md  0007-badge-policy.md  0008-hosted-reports-publish-contract.md  0009-schema-versioning.md  0010-provenance-block.md  0011-upgrade-radar-status-taxonomy.md  0012-compatibility-claim-policy.md  0013-integration-version-identity.md  0014-quality-gate-modes.md  0015-quality-profiles.md  0016-baseline-mode.md  0017-import-smoke-harness.md  0018-advisory-model.md  0019-diff-pr-comments.md  0020-hacs-installability-rules.md
docs/rules/: README.md  brand.icon.exists.md  ci.github_actions.exists.md  config_entry.runtime_data.missing.md  config_flow.connection_test.md  config_flow.file.exists.md  config_flow.manifest_flag_consistent.md  config_flow.reauth_step.exists.md  config_flow.reconfigure_step.exists.md  config_flow.unique_id.missing_abort_if_configured.md  config_flow.unique_id.not_normalized.md  config_flow.unique_id.set.md  config_flow.unique_id.uses_device_name.md  config_flow.unique_id.uses_ip_address.md  config_flow.unique_id.uses_url.md  config_flow.user_step.exists.md  diagnostics.file.exists.md  (+58 more)
scripts/: check_version.py
tests/: test_action_yml.py  test_advisory_loader.py  test_advisory_parity.py  test_ast_utils.py  test_badge_cli.py  test_badges_endpoint.py  test_badges_generator.py  test_badges_policy.py  test_badges_status.py  test_baseline.py  test_check_version.py  test_checker.py  test_cli.py  test_config.py  test_config_flow_rules.py  test_config_rule_settings.py  test_deprecations.py  test_detect.py  test_diagnostics_repairs_rules.py  test_diff.py  test_docs_render.py  test_docs_rules_coverage.py  test_examples_bad_integration.py  test_examples_good_integration.py  test_hacs_rules.py  test_init.py  test_inventory.py  test_manifest_metadata_rules.py  test_models.py  test_output.py  test_profiles.py  test_project_applicability_context.py  test_provenance.py  test_publish.py  test_repository_support_rules.py  test_rule_definition_metadata.py  test_rule_registry_contract.py  test_rules_base.py  test_rules_config_flow_advanced.py  test_rules_config_flow_user_step.py  (+19 more)
(+101 files in other folders)
