[project]
name = "hasscheck"
version = "0.2.1"
description = "Unofficial sourced checks for Home Assistant custom integration repos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "pyyaml>=6.0.3",
    "rich>=13.7",
    "typer>=0.12",
]

[project.scripts]
hasscheck = "hasscheck.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
