[project]
name = "hasscheck"
version = "0.5.0"
description = "Unofficial sourced checks for Home Assistant custom integration repos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "pyyaml>=6.0.3",
    "rich>=13.7",
    "typer>=0.12",
]

[project.scripts]
hasscheck = "hasscheck.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
